--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,11 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.5",
+        "intervention/imagecache": "^2.5",
         "laravel/framework": "^8.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "watson/sitemap": "^4.0"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
